--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>sasa</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimum-scale=1" id="vp"/>
+        <link rel="stylesheet" type="text/css" href="node_modules/swiper/dist/css/swiper.min.css" />
         <script type="text/javascript" src="src/libs/jquery-3.2.1/jquery-3.2.1.js"></script>
         <script type="text/javascript">
             // 把尺寸放大N倍（N是window.devicePixelRatio）
@@ -17,7 +18,29 @@
         </script>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            
+        </div>
         <script src='./dist/bundle.js'></script>
+
     </body>
+     <script src="./node_modules/swiper/dist/js/swiper.min.js" type="text/javascript"></script>
+     <script>
+     var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay:3000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+ </script>
 </html>
